# vorbispp

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.in
test/: Makefile.am  Makefile.in  decodertest.cpp  dtest2.cpp  encodertest.cpp
vorbispp/: Buffer.loT  CommentList.cpp  CommentList.h  DataBlock.h  DataSink.cpp  DataSink.h  DataSource.cpp  DataSource.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  Filter.cpp  Filter.h  Makefile.am  Makefile.in  MetaData.cpp  MetaData.h  OptionMap.h  PCMDataSink.cpp  PCMDataSink.h  PCMDataSource.cpp  PCMDataSource.h  PCMFileDataSink.cpp  PCMFileDataSink.h  PCMFileDataSource.cpp  PCMFileDataSource.h  PCMNullDataSink.cpp  PCMNullDataSink.h  PCMPlayDataSink.cpp  PCMPlayDataSink.h  Queue.cpp  Queue.h  VorbisDataSink.cpp  VorbisDataSink.h  VorbisDataSource.cpp  VorbisDataSource.h  VorbisFileDataSink.cpp  VorbisFileDataSink.h  VorbisFileDataSource.cpp  (+1 more)
