AC_INIT(README)

AC_CANONICAL_SYSTEM

AC_ARG_PROGRAM

AM_INIT_AUTOMAKE(libvorbis++, 0.3)

AM_CONFIG_HEADER(config.h)

AC_PROG_INSTALL

AC_PROG_CXX

AM_PROG_LIBTOOL
AC_LIBTOOL_CXX

AM_PATH_VORBIS(LIBS="$LIBS $VORBIS_LIBS", AC_MSG_ERROR(Vorbis needed!))

AM_PATH_AOPP
CXXFLAGS="$CXXFLAGS $AOPP_CXXFLAGS"
LIBS="$LIBS $AOPP_LDFLAGS"

AC_OUTPUT(Makefile vorbispp/Makefile test/Makefile)
